# checklist_generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
checklist/vesting/: introduction.md  preset_checklist.md
checklist_generator/: generator.py
finding_retriever/: solodit_tidb.py
findings/: solodit_tidb_input validation.csv  solodit_tidb_vesting.csv
